<!-- Responsibility: Luisa Leifer -->
<resources>
    <string name="app_name">icls</string>
    <!-- texts for buttons, header and short descriptions -->
    <string name="string_start">Benutzer auswählen</string>
    <string name="string_add">+</string>
    <string name="string_edit">Bearbeiten</string>
    <string name="string_accept">Akzeptieren</string>
    <string name="string_registration">Registrieren</string>
    <string name="string_user_name">Name</string> <!-- hint -->
    <string name="string_abort">Abbrechen</string>
    <string name="string_save">Speichern</string>
    <string name="string_delete">Löschen</string>
    <string name="string_choose_file">Kartei auswählen</string>
    <string name="string_statistics">Statistik</string>
    <string name="string_settings">Einstellungen</string>
    <string name="string_start_learning">Lernmodus</string>
    <string name="string_logout">Abmelden</string>
    <string name="string_file_name">Karteiname</string> <!-- modified at run-time -->
    <string name="string_all_challenges">Aufgaben insges.</string>
    <string name="string_due_challenges">Aufgaben fällig</string>
    <string name="string_class_one">Klasse 1</string>
    <string name="string_class_two">Klasse 2</string>
    <string name="string_class_three">Klasse 3</string>
    <string name="string_class_four">Klasse 4</string>
    <string name="string_class_five">Klasse 5</string>
    <string name="string_class_six">Klasse 6</string>
    <string name="string_number_of">Anzahl</string> <!-- modified at run-time -->
    <string name="string_period">Dauer</string> <!-- hint -->
    <string name="string_settings_default">Zurücksetzen</string>
    <string name="string_ask_logout">Abmelden?</string>
    <string name="string_ask_delete">Löschen?</string>
    <string name="string_yes">Ja</string>
    <string name="string_no">Nein</string>
    <string name="string_ok">OK</string>
    <string name="string_next">Weiter</string>
    <string name="string_confirm">Bestätigen</string>

    <!-- texts for challenges, feedbacks and end of challenges -->
    <string name="string_question_1_2">Das ist ein toller Dummy-Text für eine Frage der Challenge Free Answer</string> <!-- modified at run-time -->
    <string name="string_question_3">Das ist ein toller Dummy-Text für eine Frage der Challenge Imagine Answer</string> <!-- modified at run-time -->
    <string name="string_question_multiple_choice">Das ist ein toller Dummy-Text für eine Frage der Challenge Multiple Choice</string> <!-- modified at run-time -->
    <string name="string_no_challenges_left">Es sind momentan keine Fragen (mehr) fällig.</string>
    <string name="string_think_answer">Überlegen Sie sich die Antwort auf die Frage und drücken Sie anschließend auf "Weiter"</string>
    <string name="string_answer">Antwort</string> <!-- hint -->
    <string name="string_answer_1">Antwort 1</string> <!-- modified at run-time -->
    <string name="string_answer_2">Antwort 2</string> <!-- modified at run-time -->
    <string name="string_answer_3">Antwort 3</string> <!-- modified at run-time -->
    <string name="string_feedback_answer_result">Ihre Antwort war [richtig/falsch]</string> <!-- [] = modified at run-time -->
    <string name="string_feedback_correct_answer">Die richtige Antwort ist [Antwort]</string> <!-- [] = modified at run-time -->
    <string name="string_feedback_up_down_grade">Diese Frage wird [hoch-/runtergestuft]</string> <!-- [] = modified at run-time -->
    <string name="string_feedback">Die richtigen Antworten lauten: \n \n
        &#8226; Antwort 1\n
        &#8226; Antwort 2\n
        &#8226; Antwort 3\n
    </string> <!-- [] = modified at run-time -->
    <string name="string_was_answer_correct">War ihre Antwort dabei?</string>

    <!-- info texts -->
    <string name="string_duplicate_files_warning">Es sind doppelte Karteien vorhanden.</string>
    <string name="string_duplicate_files_description">Bitte schauen Sie ins Benutzerhandbuch und entfernen Sie doppelte Einträge.</string>
    <string name="string_no_challenges_warning">Für diese Kartei gibt es keine Fragen.</string>
    <string name="string_no_files_warning">Es sind keine Karteien vorhanden.</string>
    <string name="string_no_files_description">Bitte schauen Sie ins Benutzerhandbuch und fügen Sie Einträge hinzu.</string>
</resources>
