<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:padding="@dimen/activity_padding" >

    <TextView
        android:id="@+id/textFieldQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_question_multiple_choice"
        android:textSize="@dimen/activity_text_size"
        android:textColor="@color/textColor"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_question_margin"
        android:layout_alignParentTop="true" />


    <CheckBox android:id="@+id/checkboxAnswer2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_answer_2"
        android:textSize="@dimen/activity_text_size"
        android:textColor="@color/textColor"
        android:layout_centerVertical="true"/>


    <CheckBox android:id="@+id/checkboxAnswer1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_answer_1"
        android:textSize="@dimen/activity_text_size"
        android:textColor="@color/textColor"
        android:layout_above="@id/checkboxAnswer2"/>

    <CheckBox android:id="@+id/checkboxAnswer3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_answer_3"
        android:textSize="@dimen/activity_text_size"
        android:textColor="@color/textColor"
        android:layout_below="@id/checkboxAnswer2"/>

    <Button
        android:id="@+id/buttonConfirmAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_next"
        android:textSize="@dimen/activity_text_size"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:paddingLeft="@dimen/activity_padding_button"
        android:paddingRight="@dimen/activity_padding_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/buttonAbort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_abort"
        android:textSize="@dimen/activity_text_size"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:paddingLeft="@dimen/activity_padding_button"
        android:paddingRight="@dimen/activity_padding_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:textAllCaps="false" />

</RelativeLayout>