<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    android:padding="@dimen/activity_textview_padding"
    >

    <TextView
        android:id="@+id/textFieldCorrectAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_feedback_margin"
        android:textSize="@dimen/activity_text_size"
        android:text="@string/string_feedback"
        android:layout_alignParentTop="true"
        />


    <Button
        android:id="@+id/buttonWasAnswerWrong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_no"
        android:textSize="@dimen/activity_text_size"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:layout_alignParentRight="true"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        />

    <Button
        android:id="@+id/buttonWasAnswerCorrect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_yes"
        android:textSize="@dimen/activity_text_size"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:layout_above="@id/buttonLogout"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        />

    <TextView
        android:id="@+id/textFieldWasAnswerCorrect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/string_was_answer_correct"
        android:textSize="@dimen/activity_text_size"
        android:layout_centerVertical="true"
        android:layout_above="@id/buttonWasAnswerCorrect"
        android:layout_marginBottom="@dimen/activity_feedback_margin"
        />

</RelativeLayout>