<?xml version="1.0" encoding="utf-8"?>
<!-- Responsibility: Daniel zur Linden -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:padding="@dimen/activity_padding" >

    <TextView
        android:id="@+id/textFieldFeedbackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_feedback_answer_result"
        android:textSize="@dimen/activity_text_size"
        android:textColor="@color/textColor"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_margin_info"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/textFieldCorrectAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_feedback_correct_answer"
        android:textSize="@dimen/activity_text_size"
        android:textColor="@color/textColor"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_margin_feedback"
        android:layout_below="@id/textFieldFeedbackText" />

    <Button
        android:id="@+id/buttonContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_next"
        android:textSize="@dimen/activity_text_size"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:paddingLeft="@dimen/activity_padding_button"
        android:paddingRight="@dimen/activity_padding_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:textAllCaps="false" />

    <TextView
        android:id="@+id/textFieldChallengeUpDownGrade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_feedback_up_down_grade"
        android:textSize="@dimen/activity_text_size"
        android:textColor="@color/textColor"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_above="@id/buttonContinue"
        android:layout_marginBottom="@dimen/activity_margin_feedback_bottom" />

    <Button
        android:id="@+id/buttonAbort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_choose_file"
        android:textSize="@dimen/activity_text_size"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:paddingLeft="@dimen/activity_padding_button"
        android:paddingRight="@dimen/activity_padding_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:textAllCaps="false" />

</RelativeLayout>