<?xml version="1.0" encoding="utf-8"?>
<!-- Responsibility: Luisa Leifer -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:padding="@dimen/activity_padding">

    <TextView
        android:id="@+id/textFieldNoIndexCardsWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_no_files_warning"
        android:textSize="@dimen/activity_text_size_caption"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_margin_info" />

    <TextView
        android:id="@+id/textFieldNoIndexCardsDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_no_files_description"
        android:textSize="@dimen/activity_text_size_info"
        android:textColor="@color/textColor"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <Button
        android:id="@+id/buttonOk3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_ok"
        android:textSize="@dimen/activity_text_size"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textAllCaps="false" />

</RelativeLayout>