<?xml version="1.0" encoding="utf-8"?>
<!-- Responsibility: Luisa Leifer -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:padding="@dimen/activity_padding">

    <TextView
        android:id="@+id/textFieldLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_ask_logout"
        android:textSize="@dimen/activity_text_size_caption"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="@dimen/activity_margin_spinner_header"
        android:gravity="center"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/buttonDenyLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_no"
        android:textSize="@dimen/activity_text_size"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/buttonConfirmLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_yes"
        android:textSize="@dimen/activity_text_size"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:textAllCaps="false" />

</RelativeLayout>