<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGrey"
    android:padding="@dimen/activity_textview_padding"
    >

    <TextView
        android:id="@+id/textFieldNoChallengesLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_question_margin"
        android:textSize="@dimen/activity_text_size"
        android:textColor="#CC5114"
        android:text="@string/string_no_challenges_left"
        android:layout_centerVertical="true"
        android:gravity="center"
    />

     <Button
        android:id="@+id/buttonStatistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_statistics"
        android:textSize="@dimen/activity_text_size"
         android:background="@color/colorPrimary"
         android:textColor="@color/white"
         android:paddingLeft="@dimen/activity_padding_button"
         android:paddingRight="@dimen/activity_padding_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:textAllCaps="false"
        />

    <Button
        android:id="@+id/buttonBackToChooseFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_choose_file"
        android:textSize="@dimen/activity_text_size"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        android:paddingLeft="@dimen/activity_padding_button"
        android:paddingRight="@dimen/activity_padding_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:textAllCaps="false"
        />

</RelativeLayout>